[package]
name = "smart_contract"
version = "0.1.0"
authors = ["[Nicolas Xavier Herrera Medina] <[nxhm2013@gmail.com]>"]
edition = "2021"

[dependencies]
ink = { version = "5.0.0", default-features = false }
ink_storage = { version = "5.0.0", default-features = false }
parity-scale-codec = { package = "parity-scale-codec", version = "3.6.12", default-features = false, features = ["derive"] }
scale-info = { version = "2.11.3", default-features = false, features = ["derive"] }
regex = "1.7.1"
frame-benchmarking = { version = "4.0.0", default-features = false }
sp-runtime = { version = "4.0.0", default-features = false }
sp-externalities = { version = "0.29.0", default-features = false }
thread_local = "1.1.4"  # Agrega esta línea

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "ink_storage/std",
]
ink-as-dependency = []
e2e-tests = []
runtime-benchmarks = ["frame-benchmarking/std", "sp-runtime/std", "sp-externalities/std"]